fix z-index

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -45,6 +45,7 @@ body::-webkit-scrollbar {
     left: 0;
     display: flex;
     justify-content: space-between;
+    z-index: 2;
 }
 
 .header__logo {
@@ -121,6 +122,7 @@ body::-webkit-scrollbar {
     overflow-y: scroll;
     -ms-overflow-style: none;
     scrollbar-width: none;
+    z-index: 2;
 }
 
 .sidebar::-webkit-scrollbar {
@@ -350,6 +352,7 @@ body::-webkit-scrollbar {
     max-width: 300px;
     width: 50%;
     padding: 0 15px;
+    z-index: 3;
 }
 
 .alert-content {
